# polymarket-ltf

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
backtest/: README.md  pyproject.toml
backtest/freqtrade/: .gitignore  README.md  config.json  signal_eval.py
backtest/freqtrade/strategies/: CryptoReversalHyperopt.py  crypto_reversal.py
backtest/src/: backtest.py  report.py  scan.py
backtest/src/data/: __init__.py  registry.py  snapshot_csv.py
backtest/src/domain/: __init__.py  models.py  strategy.py
backtest/src/engine/: __init__.py  engine.py
backtest/src/reports/: __init__.py  reporting.py
backtest/src/strategies/: __init__.py  mean_reversion.py  registry.py
backtest/tests/: test_backtest.py
backtest/tests/fixtures/: sample.csv
benches/: ws_hot_paths.rs
dashboard/: app.js  index.html  styles.css
docs/: crypto_reversal_runtime.md  dashboard.md  development.md  project.md  research.md
examples/: book_monitor.rs  clob_ok.rs  market_by_slug.rs  snapshot_write.rs  user_monitor.rs
schema/: init.sql
scripts/: main.sh  polymarket-ltf.bat  polymarket-ltf.sh  snapshot-write.sh  snapshot_write.sh
skills/backtest/: SKILL.md
skills/backtest/agents/: openai.yaml
skills/dev/: SKILL.md
skills/dev/agents/: openai.yaml
src/: config.rs  errors.rs  events.rs  lib.rs  logging.rs  main.rs  snapshot.rs
src/binance/: mod.rs  websocket.rs
src/dashboard/: api.rs  http.rs  mod.rs
src/polymarket/: market_registry.rs  mod.rs  orderbook_stream.rs  relayer.rs  rtds_stream.rs  user_stream.rs  user_task.rs
src/polymarket/types/: mod.rs  open_orders.rs  orderbook.rs  positions.rs
src/polymarket/utils/: crypto_market.rs  http.rs  mod.rs
src/storage/: mod.rs  sqlite.rs
src/strategy/: mod.rs
src/strategy/crypto_reversal/: constants.rs  execute.rs  mod.rs  model.rs  runtime.rs  service.rs
src/types/: crypto.rs  market.rs  mod.rs
