[package]
name = "polymarket-ltf"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = "1.5.7"
alloy-signer = "1.7.3"
alloy-signer-local = "1.7.3"
alloy-sol-types = "1.5.7"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.11.1"
chrono = "0.4"
futures = "0.3"
hmac = "0.12"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-str"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
polymarket_client_sdk_v2 = { git = "https://github.com/Polymarket/rs-clob-client-v2", branch = "main", default-features = false, features = ["clob", "data", "gamma", "heartbeats", "rtds", "ws"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ws_hot_paths"
harness = false
