[project]
name = "polymarket-ltf-backtest"
version = "0.1.0"
description = "Freqtrade workspace for crypto_reversal research in polymarket-ltf"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
]
authors = [
    { name = "polymarket-ltf" },
]

[project.optional-dependencies]
reports = [
    "quantstats>=0.0.62",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
